Changed the nav bar to a css flexbox so it spaces the items dynamically on small screens but only expands to the max-width of article content.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,11 @@
 	<h1><a href="{{ page.base }}index.html">Dharma Pearls</a></h1>
 	<h2>Translating Classical Buddhism to Modern English</h2>
 	<nav>
+		<div class="nav-list">
 			<a class="nav-item" href="{{ page.base }}whats-new.html">What's New</a>
 			<a class="nav-item" href="{{ page.base }}translations.html">Translations</a>
 			<a class="nav-item" href="{{ page.base }}resources.html">Resources</a>
 			<a class="nav-item last" href="{{ page.base }}about.html">About</a>
+		</div>
 	</nav>
 </header>
