--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -1,6 +1,6 @@
 body {
   background-color: #FFFFD5;
-  font-size: 18px;
+  font-size: 21px;
 }
 
 article {
@@ -64,4 +64,8 @@ ul.toc {
 
 ol {
   margin-bottom: 5px;
+}
+
+.center {
+  text-align: center;
 }
