--- a/_includes/sutra.html
+++ b/_includes/sutra.html
@@ -1,5 +1,5 @@
-{%- assign chinese = site.data.translation[page.ch] -%}
-{%- assign english = site.data.translation[page.en] -%}
+{%- assign chinese = site.data[page.ch] -%}
+{%- assign english = site.data[page.en] -%}
 {%- assign title = english.title -%}
 {%- assign translator = english.translator -%}
 {%- assign date = english.revised -%}
@@ -12,17 +12,22 @@
   {%- assign number = english.number -%}
   {%- if english.collection contains 'Long' -%}
     {%- assign clink = page.base | append: '01_dirgha/contents.html' -%}
+    {%- assign english = site.data[page.en] -%}
   {%- elsif english.collection contains 'Medium' -%}
-    {%- assign clink = page.base | append: '02_madhyama/contents.html' -%}
+    {%- assign clink = page.base | append: '02_madhyama/contents.html'  -%}
+    {%- assign english = site.data[page.en] -%}
   {%- elsif english.collection contains 'Related' -%}
     {%- assign clink = 'contents.html' -%}
-    {%- assign english = site.data.samyukta[page.en][page.number] -%}
+    {%- if page.number -%}
+      {%- assign english = site.data[page.en][page.number] -%}
+    {%- endif -%}
     {%- assign number = english.number -%}
     {%- assign title = english.title -%}
     {%- assign translator = english.translator -%}
     {%- assign date = english.revised -%}
   {%- elsif english.collection contains 'Numerical' -%}
       {%- assign clink = page.base | append: '04_ekottarika/contents.html'-%}
+      {%- assign english = site.data[page.en] -%}
   {%- endif -%}
 {%- endif -%}
 
