Segmented and edited SA13.4-5. Changed the way verse is parsed by the sutra-verse-en include. Applied a temp fix to MA 7 so its unsegmented verse displays correctly. Typos in DA 27 fixed.

--- a/_includes/sutra-verse-en.html
+++ b/_includes/sutra-verse-en.html
@@ -2,7 +2,7 @@
   <ol  id="en.{{ p | plus: 1}}" start="{{ p | plus: 1 }}" class="verse en">
     <li class="en">
       {% for line in english.sections[s].paragraphs[p].verse %}
-      {{ line }}<br/>
+      {{ line.content }}<br/>
       {% endfor %}
     </li>
   </ol>
