Edited SA 13.24-30 and added them to SA 13 contents. Also added the samukta headings to each sutra and linked it to the samyukta contents.

--- a/_includes/sutra.html
+++ b/_includes/sutra.html
@@ -1,8 +1,9 @@
-
-
 <article class="sutra">
     <h1><a href="{{ clink }}">{{ collection }}</a></h1>
-    <h2 id="en.0">{{ title }}</h2>
+    {%- if subtitle -%}
+      <h2 class="center"><a href="contents.html">{{ subtitle }}</a></h2>
+    {%- endif -%}
+    <h3 id="en.0">{{ title }}</h3>
 
   {% for section in english.sections %}
     {% for paragraph in section.paragraphs %}
