--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,34 +1,37 @@
-{%- assign chinese = site.data[page.ch] -%}
-{%- assign english = site.data[page.en] -%}
-{%- assign title = english.title -%}
-{%- assign translator = english.translator -%}
-{%- assign date = english.revised -%}
+{%- if page.type == 'translation' -%}
+  {%- assign chinese = site.data[page.ch] -%}
+  {%- assign english = site.data[page.en] -%}
+  {%- assign title = english.title -%}
+  {%- assign translator = english.translator -%}
+  {%- assign date = english.revised -%}
 
-{%- assign s = 0 -%}
-{%- assign p = 0 -%}
 
-{%- if english.collection -%}
-  {%- assign collection = english.collection -%}
-  {%- assign number = english.number -%}
-  {%- if english.collection contains 'Long' -%}
-    {%- assign clink = page.base | append: '01_dirgha/contents.html' -%}
-    {%- assign english = site.data[page.en] -%}
-  {%- elsif english.collection contains 'Medium' -%}
-    {%- assign clink = page.base | append: '02_madhyama/contents.html'  -%}
-    {%- assign english = site.data[page.en] -%}
-  {%- elsif english.collection contains 'Related' -%}
-    {%- assign clink = page.base | append: '03_samyukta/contents.html' -%}
-    {%- if page.number -%}
-      {%- assign english = site.data[page.en][page.number] -%}
-    {%- endif -%}
+  {%- assign s = 0 -%}
+  {%- assign p = 0 -%}
+
+  {%- if english.collection -%}
+    {%- assign collection = english.collection -%}
     {%- assign number = english.number -%}
-    {%- assign title = english.title -%}
-    {%- assign subtitle = english.group -%}
-    {%- assign translator = english.translator -%}
-    {%- assign date = english.revised -%}
-  {%- elsif english.collection contains 'Numerical' -%}
-      {%- assign clink = page.base | append: '04_ekottarika/contents.html'-%}
+    {%- if english.collection contains 'Long' -%}
+      {%- assign clink = page.base | append: '01_dirgha/contents.html' -%}
       {%- assign english = site.data[page.en] -%}
+    {%- elsif english.collection contains 'Medium' -%}
+      {%- assign clink = page.base | append: '02_madhyama/contents.html'  -%}
+      {%- assign english = site.data[page.en] -%}
+    {%- elsif english.collection contains 'Related' -%}
+      {%- assign clink = page.base | append: '03_samyukta/contents.html' -%}
+      {%- if page.number -%}
+        {%- assign english = site.data[page.en][page.number] -%}
+      {%- endif -%}
+      {%- assign number = english.number -%}
+      {%- assign title = english.title -%}
+      {%- assign subtitle = english.group -%}
+      {%- assign translator = english.translator -%}
+      {%- assign date = english.revised -%}
+    {%- elsif english.collection contains 'Numerical' -%}
+        {%- assign clink = page.base | append: '04_ekottarika/contents.html'-%}
+        {%- assign english = site.data[page.en] -%}
+    {%- endif -%}
   {%- endif -%}
 {%- endif -%}
 <!doctype html>
@@ -39,7 +42,7 @@
     <title>
     {%- if page.type == 'translation' -%}
       {{ english.collection}}{% if english.group %} | {{ english.group }}{% endif %} | {{ english.title }}
-    {%- elsif page.type == 'default' or page.type == 'home' -%}
+    {%- else -%}
       {{ page.title }}
     {%- endif -%}
     </title>
@@ -69,11 +72,13 @@
 
   </head>
   <body>
-    {% include header.html %}
-    {% if page.type == "translation" %}
-      {% include sutra.html %}
-    {% else %}
+    {%- include header.html -%}
+    {%- if page.type == "translation" -%}
+      {%- include sutra.html -%}
+    {%- elsif page.type == 'kramdown'-%}
+      {%- include kramdown-sutra.html -%}
+    {%- else -%}
       {{ content }}
-    {% endif %}
+    {%- endif -%}
   </body>
 </html>
