Improved What's New list styling and added links to sutras in MA's root index.

--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -69,3 +69,13 @@ ol {
 .center {
   text-align: center;
 }
+
+.list-style-none {
+  list-style-type: none;
+  margin-left: -20px;
+}
+
+.list-style-disc {
+  margin: 15px 0 15px 20px;
+  list-style-type: disc;
+}
