--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -13,11 +13,6 @@ article.home h3 {
   margin-top: 6px; margin-bottom: 6px;
 }
 
-.home ul {
-  margin: 15px 0 15px 0;
-  list-style-type: disc;
-}
-
 .refs {
   color: grey;
   font-size: 20px;
@@ -26,4 +21,22 @@ article.home h3 {
 .synopsis {
   text-indent: 0px;
   margin: 0px 0px 20px 20px;
+}
+
+dt {
+  float: left;
+    clear: left;
+    width: 150px;
+    text-align: right;
+    font-weight: bold;
+    color: green;
+}
+
+dt::after {
+    content: ":";
+}
+
+dd {
+  margin: 0 0 0 160px;
+    padding: 0 0 0.5em 0;
 }
