--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,8 @@
       {%- include sutra.html -%}
     {%- elsif page.type == 'kramdown'-%}
       {%- include kramdown-sutra.html -%}
+    {%- elsif page.type == 'kramdown-index' -%}
+      {%- include kramdown-index.html -%}
     {%- else -%}
       {{ content }}
     {%- endif -%}
