--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -24,9 +24,9 @@ div.samNdx > h4 {
   text-align: left;
 }
 
-div.samNdx > h4 > .refs {
+.links {
   color: grey;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 div.samNdx > hr {
@@ -61,4 +61,18 @@ div.samNdx > hr {
 .whats-new > dd {
   margin: 0 0 0 160px;
     padding: 0 0 0.5em 0;
+}
+
+.varga {
+  list-style-type: none;
+}
+
+.samyukta {
+  list-style: none;
+  margin-left: -20px;
+}
+
+.samyukta > li > ul {
+  list-style: none;
+  margin-left: -20px;
 }
