Translation of MA 77 added and other misc corrections.

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -24,6 +24,18 @@ div.samNdx > h4 {
   text-align: left;
 }
 
+div.madNdx > h2 {
+  margin-bottom: 5px;
+}
+
+div.madNdx > h3 {
+  margin-bottom: 5px;
+}
+
+div.madNdx > ul {
+  margin: 5px 0 5px 0;
+}
+
 .links {
   color: grey;
   font-size: 18px;
