Style changes to resize text to smaller screens and switch to block paragraph format.

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -32,13 +32,13 @@ div.madNdx > h3 {
   margin-bottom: 5px;
 }
 
-div.madNdx > ul {
+div.madNdx > ol {
   margin: 5px 0 5px 0;
 }
 
 .links {
   color: grey;
-  font-size: 18px;
+  font-size: 0.8em;
 }
 
 div.samNdx > hr {
