--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,7 +1,7 @@
 /* Header Styles */
 header {
   width: 100%;
-  height: 100px;
+  height: 4.76em;
   position: fixed;
   top: 0px; left: 0px;
   margin: 0;
@@ -26,21 +26,21 @@ header h1 {
   margin: 15px 0 0 0;
   padding: 0;
   text-shadow: 2px 2px 4px #000000;
-  font-size: 48px;
+  font-size: 2.28em;
 }
 
 header h2 {
   width: 100%;
   margin: 0; padding: 0;
-  font-size: 20px;
+  font-size: 0.95em;
   font-family: cronos-pro;
 }
 
 nav {
   position: fixed;
-  height: 30px;
+  height: 1.43em;
   width: 100%;
-	top: 100px; left: 0px;
+	top: 4.76em; left: 0px;
   text-align: center;
   font-family: cronos-pro, 'Cambria', serif;
   background-color: lightseagreen;
