--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -1,15 +1,28 @@
 html {
   scroll-padding-top: 140px;
 }
+
 body {
   background-color: #FFFFD5;
-  font-size: 21px;
+  font-size: 15px;
+}
+
+@media (min-width:400px) {
+  body {
+    font-size: 18px;
+  }
+}
+
+@media (min-width:800px) {
+  body {
+    font-size: 21px
+  }
 }
 
 article {
   position: relative;
-  max-width: 650px;
-  margin: 150px auto 0 auto;
+  max-width: 30em;
+  margin: 7.2em auto 0 auto;
 	padding-left: 10px;
 }
 
@@ -25,7 +38,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   text-align: center;
-  font-size: 36px;
+  font-size: 1.7em;
 }
 
 p, li, span {
@@ -59,7 +72,7 @@ a:hover {
   text-align: center;
   margin-top: 0.5in;
   margin-bottom: 0.5in;
-  font-size: 36px;
+  font-size: 1.7em;
 }
 ul.toc {
   list-style-type: none;
