--- a/_sass/_translation.scss
+++ b/_sass/_translation.scss
@@ -19,7 +19,7 @@
   display: none;
 }
 .notes li {
-  font-size: 14px;
+  font-size: 0.67em;
 }
 
 .verse {
@@ -35,13 +35,13 @@
   text-align: center;
 }
 
-p {
+/* p {
   text-indent: 20px;
   margin: 0;
-}
+} */
 
 p > sup {
-  font-size: 12px;
+  font-size: 0.57em;
 }
 
 .sutra hr {
@@ -51,7 +51,7 @@ p > sup {
 }
 
 .sutra .footer h5 {
-  font-size: 14px;
+  font-size: 0.67em;
 }
 
 .footer-nav {
