--- a/_sass/indices.scss
+++ b/_sass/indices.scss
@@ -8,13 +8,13 @@
 }
 
 .index > table {
-  font-size: 15px;
+  font-size: 0.7em;
   width: 100%;
   border-collapse: collapse;
 }
 
 .index > table > thead > tr > th {
-  font-size: 16px;
+  font-size: 0.75em;
   color: white;
   text-align: left;
   background-color: teal;
