More css work and fixed the attribution footers in MA.

--- a/_sass/_translation.scss
+++ b/_sass/_translation.scss
@@ -23,14 +23,14 @@
 }
 
 .verse {
-  margin-left: 30px;
-  margin-bottom: 20px;
+  margin-left: 1.4em;
+  margin-bottom: 1em;
   list-style-type: none;
 }
 
 .uddana {
   margin-left: 0;
-  margin-bottom: 20px;
+  margin-bottom: 1em;
   list-style-type: none;
   text-align: center;
 }
