Fixed link of header of Samyukta texts.

--- a/_includes/sutra.html
+++ b/_includes/sutra.html
@@ -1,7 +1,7 @@
 <article class="sutra">
     <h1><a href="{{ clink }}">{{ collection }}</a></h1>
     {%- if subtitle -%}
-      <h2 class="center"><a href="contents.html">{{ subtitle }}</a></h2>
+      <h2 class="center"><a href="index.html">{{ subtitle }}</a></h2>
     {%- endif -%}
     <h3 id="en.0">{{ title }}</h3>
 
