--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -88,7 +88,8 @@ ol {
 
 .list-style-none {
   list-style-type: none;
-  margin-left: -20px;
+  margin-left: 0px;
+  text-indent: -30px;
 }
 
 .list-style-disc {
