Housekeeping. Removed unused css styles, unfinished resources projects that moved to the wiki.

--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -66,22 +66,14 @@ a:hover {
 }
 
 
-
 /* Table of Contents */
-.TOC h2 {
-  text-align: center;
-  margin-top: 0.5in;
-  margin-bottom: 0.5in;
-  font-size: 1.7em;
-}
-ul.toc {
-  list-style-type: none;
-}
-
 ol {
   margin-bottom: 5px;
 }
 
+.varga {
+  list-style-type: none;
+}
 .center {
   text-align: center;
 }
