Reformated SA indices, revised SA 1.1-10, added MA 210.

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -15,6 +15,7 @@ article.home > h3 {
 }
 
 article.home > h4 {
+  font-size: 1.2em;
   text-align: center;
 }
 
@@ -25,7 +26,7 @@ article.home > h4 {
 
 .refs {
   color: grey;
-  font-size: 20px;
+  font-size: 1em;
 }
 
 .synopsis {
