--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -133,6 +133,12 @@ ol {
   text-indent: -30px;
 }
 
+.list-style-none2 {
+  list-style-type: none;
+  margin-left: 30px;
+  text-indent: -30px;
+}
+
 .list-style-disc {
   margin: 0.7em 0 0.7em 0.3em;
   list-style-type: disc;
