--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -46,7 +46,7 @@ img.inline-icon {
 }
 
 h3, h4, h5, h6 {
-  font-family: 'Noto Serif','Arial', sans-serif;
+  font-family: 'Noto Serif','Cambria', serif;
   font-weight: normal;
 }
 
@@ -63,7 +63,7 @@ h2 {
 }
 
 p, li, span {
-  font-family: 'Noto Sans', 'Cambria', serif;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 hr {
