--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -115,6 +115,10 @@ ol {
   text-align: center;
 }
 
+.blockquote {
+  padding-left: 2em;
+}
+
 .list-style-none {
   list-style-type: none;
   margin-left: 0px;
