--- a/_sass/_translation.scss
+++ b/_sass/_translation.scss
@@ -79,7 +79,7 @@
 }
 
 .sutra > .translator, .revised {
-  .font-size: 0.7em;
+  font-size: 0.7em;
 }
 
 .sutra > .translator {
@@ -137,7 +137,7 @@ td {
   font-size: 0.8em;
 }
 
-td > p {
+/* td > p {
   margin: 0, 0, 20px, 0;
   padding: 0px;
-}
+}*/
