Added more to the reader's guide for EA.

--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -46,24 +46,25 @@ img.inline-icon {
 }
 
 h3, h4, h5, h6 {
-  font-family: 'Noto Serif','Cambria', serif;
+  font-family: Cambria, Georgia, serif;
   font-weight: normal;
 }
 
 h1 {
   text-align: center;
-  font-family: 'Noto Serif', 'Merriweather', 'Georgia', serif;
+  font-family: Cambria, Georgia, serif;
   font-weight: bold;
 }
 
 h2 {
   text-align: center;
-  font-family: 'Noto Serif', 'Cambria', serif;
+  font-family: Cambria, Georgia, serif;
   font-weight: bold;
 }
 
 p, li, span {
-  font-family: 'Noto Sans', sans-serif;
+  font-family: Cambria, Georgia, serif;
+  font-size: 1.1em;
 }
 
 hr {
