--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -31,9 +31,13 @@ article {
 	padding-left: 10px;
 }
 
-img {
+img#logo {
   display: block;
   margin: 20px auto 20px auto;
+}
+
+img#bnet-logo {
+  display: inline-block;
 }
 
 img.inline-icon {
