Edits to stylesheets

--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -89,6 +89,14 @@ hr {
   text-align: left;
 }
 
+.center {
+  text-align: center;
+}
+
+.radindex > a:link {
+  text-decoration: none;
+}
+
 .mar-bot-0 {
   margin-bottom: 0px;
 }
