--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,8 +1,4 @@
 ---
 ---
 
-@import "header";
-@import "home";
-@import "indices";
-@import "translation";
-@import "stylesheet";
+@import'stylesheet';
