Update of SA 1.147-8 and IPA guide

--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -101,6 +101,11 @@ hr {
   margin-bottom: 0px;
 }
 
+.mar-vert-0 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 a:link {
   text-decoration: underline teal;
   color: black;
