Added MA 137, 139, and 140.

--- a/_sass/_stylesheet.scss
+++ b/_sass/_stylesheet.scss
@@ -480,6 +480,12 @@ h3.next {
   margin: 0;
 }
 
+.sutra ul {
+  padding: 0.5em 0 0.5em 0;
+  font-size: 0.9em;
+  margin-left: 1.5em;
+}
+
 
 /* styles for bilingual table format - experimental */
 table.trans {
