--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,18 +9,23 @@ html {
 
 body {
   background-color: #FFFFE0;
-  font-size: 14px;
+  font-size: 15px;
+  line-height: 120%;
+}
+
+sup {
+  line-height: 0;
 }
 
 @media (min-width:400px) {
   body {
-    font-size: 15px;
+    font-size: 16px;
   }
 }
 
 @media (min-width:800px) {
   body {
-    font-size: 16px
+    font-size: 17px
   }
 }
 
@@ -66,9 +71,8 @@ h2 {
   font-weight: bold;
 }
 
-p, li, td, span {
+p, ol, ul, table, span {
   font-family: Cambria, Georgia, serif;
-  font-size: 1.1em;
 }
 
 hr {
@@ -170,13 +174,14 @@ ol {
   text-indent: -1em;
 }
 
-td > ul.verse {
+td > ul.verse, ul.blockquote-verse {
   margin-top: -0.5em;
   margin-bottom: -0.5em;
-  font-size: 0.9em;
 }
 
-
+td > ul.blockquote-verse li {
+  padding-left: 2em;
+}
 
 /* Header Styles */
 
@@ -215,6 +220,7 @@ header > h1 {
   text-shadow: 2px 2px 4px #000000;
   font-size: 2.5em;
   font-family: 'Merriweather', 'Georgia', sans-serif;
+  line-height: normal;
 }
 
 header > h2 {
@@ -223,6 +229,7 @@ header > h2 {
   font-size: 1.2em;
   font-family: cronos-pro;
   font-weight: normal;
+  line-height: normal;
 }
 
 nav {
@@ -246,6 +253,7 @@ nav.hide {
   justify-content: space-between;
   width: 100%;
   max-width: 40em;
+  line-height: normal;
 }
 
 a.banner:link {
@@ -338,11 +346,10 @@ article.home > h4 {
 
 .refs {
   color: grey;
-  font-size: 1em;
 }
 
 .synopsis {
-  font-size: 1.1em;
+  font-size: 1em;
   text-indent: 0px;
   margin: 0px 0px 1.25em 2.6em;
 }
@@ -435,10 +442,25 @@ article.home > h4 {
   margin-top: 0;
 }
 
+.sutra > .notes-list {
+  margin-left: 8%;
+  margin-right: 12%;
+  font-size: 1em;
+}
+
 .verse {
   margin-left: 1.4em;
   margin-bottom: 1em;
   list-style-type: none;
+  font-size: 1em;
+}
+
+
+.blockquote-verse {
+  margin-left: 3.4em;
+  margin-bottom: 1em;
+  list-style-type: none;
+  font-size: 1em;
 }
 
 li.verse p {
@@ -540,12 +562,12 @@ th {
 td {
   vertical-align: top;
   border: 0px grey dashed;
+  font-size: 1em;
 }
 
 .ch {
   font-family: 'Noto Serif TC', PMingLiU;
   font-size: 1em;
-  width: 33%;
 }
 
 .en {
@@ -558,6 +580,31 @@ td {
 }
 
 .notes-list li > p {
-  margin: 0.5em 0 0.5em 0;
+  margin: 0.25em 0 0.25em 0;
   font-size: 1em;
+}
+
+
+/*            Essay Stylesheet                           */
+
+article.essay {
+  max-width: 50em;
+}
+
+.essay h1 {
+  font-size: 3em;
+  margin-top: 4em;
+  margin-bottom: 0.5em;
+}
+
+.essay h2 {
+  font-size: 2em;
+  margin-top: 0.5em;
+  margin-bottom: 2em;
+}
+
+.essay h3 {
+  font-size: 1.5em;
+  margin-top: 2em;
+  margin-bottom: 1em;
 }
