--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -390,6 +390,25 @@ article.home > h5 {
   margin: 0px 0px 1.25em 2.6em;
 }
 
+.pron > dt {
+  float: left;
+  clear: left;
+  width: 25%;
+  text-align: right;
+  font-weight: bold;
+  font-size: 1em;
+}
+
+.pron > dd {
+  margin: 0 0 0 27%;
+  padding: 0;
+  font-size: 1em;
+}
+
+headword {
+  font-size: 3em;
+}
+
 .whats-new > dt {
   float: left;
   clear: left;
@@ -428,9 +447,19 @@ article.home > h5 {
   margin-bottom: 0.5em;
 }
 
+.glossary > h1 {
+  font-size: 2em;
+  margin-bottom: 0.5em;
+}
+
 .sutra > h2 {
 	font-size: 1.5em;
   margin-top: 2em;
+}
+
+.glossary > h2 {
+  font-size: 2.5em;
+  margin-bottom: 1em;
 }
 
 .sutra > h3 {
