corrections to MA.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -656,6 +656,11 @@ td {
   font-size: 1em;
 }
 
+.ch > ul {
+  font-family: 'Noto Serif TC', PMingLiU;
+  font-size: 1em;
+}
+
 .ch > a {
   text-decoration: none;
 }
