Added a donations page and added link to site menu bar.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,10 @@
 	<nav>
 		<div class="nav-list">
 			<a class="nav-item header" href="{{ page.base }}whats-new.html">What’s New</a>
-			<a class="nav-item header" href="{{ page.base }}translations.html">Translations</a>
-			<a class="nav-item header" href="{{ page.base }}resources.html">Resources</a>
-			<a class="nav-item header last" href="{{ page.base }}about.html">About</a>
+			<a class="nav-item header" href="{{ page.base }}translations.html" >Translations</a>
+			<a class="nav-item header" href="{{ page.base }}resources.html" >Resources</a>
+			<a class="nav-item header" href="{{ page.base }}about.html" >About</a>
+			<a class="nav-item header last" href="{{ page.base }}donations.html">Donations</a>
 		</div>
 	</nav>
 </header>
